# playpilot

./: page_source.txt  pyproject.toml
src/playpilot/: __init__.py  click.py
src/playpilot/cli/: __init__.py  run.py
src/playpilot/tools/: source.py
